--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="https://unpkg.com/swiper@7/swiper-bundle.min.css" />
 
     <!-- custom css file link  -->
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="style.css">
 
 </head>
 <body>
@@ -46,7 +46,7 @@
 
         <div class="swiper-wrapper">
 
-            <div class="swiper-slide slide" style="background: url(images/home-bg-1.jpg) no-repeat;">
+            <div class="swiper-slide slide" style="background: url(home-bg-1.jpg) no-repeat;">
                 <div class="content">
                     <span>be strong, be fit</span>
                     <h3>Make yourself stronger than your excuses.</h3>
@@ -54,7 +54,7 @@
                 </div>
             </div>
 
-            <div class="swiper-slide slide" style="background: url(images/home-bg-2.jpg) no-repeat;">
+            <div class="swiper-slide slide" style="background: url(home-bg-2.jpg) no-repeat;">
                 <div class="content">
                     <span>be strong, be fit</span>
                     <h3>Make yourself stronger than your excuses.</h3>
@@ -62,7 +62,7 @@
                 </div>
             </div>
 
-            <div class="swiper-slide slide" style="background: url(images/home-bg-3.jpg) no-repeat;">
+            <div class="swiper-slide slide" style="background: url(home-bg-3.jpg) no-repeat;">
                 <div class="content">
                     <span>be strong, be fit</span>
                     <h3>Make yourself stronger than your excuses.</h3>
@@ -85,7 +85,7 @@
 <section class="about" id="about">
 
     <div class="image">
-        <img src="images/about-img.jpg" alt="">
+        <img src="about-img.jpg" alt="">
     </div>
 
     <div class="content">
@@ -127,7 +127,7 @@
 
         <div class="box">
             <div class="image">
-                <img src="images/f-img-1.jpg" alt="">
+                <img src="f-img-1.jpg" alt="">
             </div>
             <div class="content">
                 <img src="images/icon-1.png" alt="">
@@ -138,10 +138,10 @@
 
         <div class="box second">
             <div class="image">
-                <img src="images/f-img-2.jpg" alt="">
+                <img src="f-img-2.jpg" alt="">
             </div>
             <div class="content">
-                <img src="images/icon-2.png" alt="">
+                <img src="icon-2.png" alt="">
                 <h3>gym for men</h3>
                 <p>Of all the paths you take in life, make sure a few of them are dirt.</p>
             </div>
@@ -149,10 +149,10 @@
 
         <div class="box">
             <div class="image">
-                <img src="images/f-img-3.jpg" alt="">
+                <img src="f-img-3.jpg" alt="">
             </div>
             <div class="content">
-                <img src="images/icon-3.png" alt="">
+                <img src="icon-3.png" alt="">
                 <h3>gym for women</h3>
                 <p>A strong woman knows she has strength enough for the journey, but a woman of strength knows it is in the journey where she will become strong.</p>
             </div>
@@ -215,7 +215,7 @@
     <div class="box-container">
 
         <div class="box">
-            <img src="images/trainer-1.jpg" alt="">
+            <img src="trainer-1.jpg" alt="">
             <div class="content">
                 <span>Expert Trainer</span>
                 <h3>Brock Henry</h3>
@@ -229,7 +229,7 @@
         </div>
 
         <div class="box">
-            <img src="images/trainer-2.jpg" alt="">
+            <img src="trainer-2.jpg" alt="">
             <div class="content">
                 <span>Expert Trainer</span>
                 <h3>Sasha Flair</h3>
@@ -243,7 +243,7 @@
         </div>
 
         <div class="box">
-            <img src="images/trainer-3.jpg" alt="">
+            <img src="trainer-3.jpg" alt="">
             <div class="content">
                 <span>Expert Trainer</span>
                 <h3>Matt Lesnar</h3>
@@ -257,7 +257,7 @@
         </div>
 
         <div class="box">
-            <img src="images/trainer-4.jpg" alt="">
+            <img src="trainer-4.jpg" alt="">
             <div class="content">
                 <span>Expert Trainer</span>
                 <h3>Charlotte Banks</h3>
@@ -306,7 +306,7 @@
             <div class="swiper-slide slide">
                 <p>“High Quality, diverse group classes, equipments are in good condition, people are nice to one another like in a friendly community. ” </p>
                 <div class="user">
-                    <img src="images/pic-1.png" alt="">
+                    <img src="pic-1.png" alt="">
                     <div class="info">
                         <h3>Mark Symonds</h3>
                         <span>Engineer</span>
@@ -318,7 +318,7 @@
             <div class="swiper-slide slide">
                 <p>Simply, with their help I achieved my goal of putting on weight, one which I have struggled with for years.</p>
                 <div class="user">
-                    <img src="images/pic-2.png" alt="">
+                    <img src="pic-2.png" alt="">
                     <div class="info">
                         <h3>Ashley Wyatt</h3>
                         <span>designer</span>
@@ -330,7 +330,7 @@
             <div class="swiper-slide slide">
                 <p>I know that I would never have achieved the level of fitness and wellness I have at my age, (currently forty-nine) if not for the personal attention given in my training sessions.</p>
                 <div class="user">
-                    <img src="images/pic-3.png" alt="">
+                    <img src="pic-3.png" alt="">
                     <div class="info">
                         <h3>Matt Jordan</h3>
                         <span>Artist</span>
@@ -342,7 +342,7 @@
             <div class="swiper-slide slide">
                 <p>After major hip surgery I was unable to undertake strenuous exercise. Once my physio gave me the all clear to do moderate and restricted exercise I contacted VM Fitstart.</p>
                 <div class="user">
-                    <img src="images/pic-4.png" alt="">
+                    <img src="pic-4.png" alt="">
                     <div class="info">
                         <h3>Danielle Gardner</h3>
                         <span>Blogger</span>
@@ -371,7 +371,7 @@
 
             <div class="swiper-slide slide">
                 <div class="image">
-                    <img src="images/blog-1.jpg" alt="">
+                    <img src="blog-1.jpg" alt="">
                 </div>
                 <div class="content">
                     <h3>fitness is not about being better than someone else</h3>
@@ -382,7 +382,7 @@
             
             <div class="swiper-slide slide">
                 <div class="image">
-                    <img src="images/blog-2.jpg" alt="">
+                    <img src="blog-2.jpg" alt="">
                 </div>
                 <div class="content">
                     <h3>Pain is weakness leaving the body</h3>
@@ -393,7 +393,7 @@
 
             <div class="swiper-slide slide">
                 <div class="image">
-                    <img src="images/blog-3.jpg" alt="">
+                    <img src="blog-3.jpg" alt="">
                 </div>
                 <div class="content">
                     <h3>The first wealth is health.</h3>
@@ -404,7 +404,7 @@
 
             <div class="swiper-slide slide">
                 <div class="image">
-                    <img src="images/blog-4.jpg" alt="">
+                    <img src="blog-4.jpg" alt="">
                 </div>
                 <div class="content">
                     <h3>The road to nowhere is paved with excuses.</h3>
@@ -415,7 +415,7 @@
 
             <div class="swiper-slide slide">
                 <div class="image">
-                    <img src="images/blog-5.jpg" alt="">
+                    <img src="blog-5.jpg" alt="">
                 </div>
                 <div class="content">
                     <h3>It’s never too late to become what you might have been.</h3>
